--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ body {
   place-items: center;
   min-width: 320px;
 }
+.glassMorphismContainer {
+  width: 100vw;
+  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background: rgb(255, 255, 255);
+  z-index: 1;
+  background-image: radial-gradient(
+      ellipse 45rem 45rem at bottom left,
+      rgba(255, 247, 0, 0.29),
+      transparent
+    ),
+    radial-gradient(ellipse farthest-corner at top left, #ffffff, transparent),
+    radial-gradient(
+      ellipse 87.2rem 50.25rem at 50% 25%,
+      rgb(68 0 255 / 71%),
+      transparent
+    ),
+    radial-gradient(
+      ellipse 62.2rem 37.25rem at 65% 85%,
+      rgb(251 0 255 / 28%),
+      transparent
+    );
+}
