--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
+  text-align: center;
   background: rgb(255, 255, 255);
   z-index: 1;
   background-image: radial-gradient(
